Configurando docker-compose

--- a/backend/.devcontainer/devcontainer.json
+++ b/backend/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
 				"meta.pyrefly",
 				"yzhang.markdown-all-in-one",
 				"PKief.material-icon-theme",
-				"ms-python.vscode-python-envs"
+				"ms-python.vscode-python-envs",
+				"ms-azuretools.vscode-docker"
 			]
 		}
 	},
