--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   db:
     image: postgres:16
@@ -13,31 +11,36 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-  
+    networks:
+      - app-network
+
   redis:
     image: redis:7-alpine
     container_name: exam-scan-redis
     restart: unless-stopped
     ports:
       - "6379:6379"
+    networks:
+      - app-network
 
-  fastapi:
+  api:
     build:
-      context: ./backend
+      context: .
       dockerfile: Dockerfile
     container_name: exam-scan-api
+    restart: unless-stopped
     ports:
       - "8000:8000"
     env_file:
-      - ./backend/.env
-    volumes:
-      - ./backend:/app
+      - ./.env
     depends_on:
       - db
       - redis
+    networks:
+      - app-network
 
   pgadmin:
-    image: dpage/pgadmin4
+    image: dpage/pgadmin4:latest
     container_name: exam-scan-pgadmin
     restart: unless-stopped
     environment:
@@ -47,20 +50,27 @@ services:
       - "5050:80"
     depends_on:
       - db
+    networks:
+      - app-network
 
   prometheus:
     image: prom/prometheus:latest
     container_name: exam-scan-prometheus
+    restart: unless-stopped
+    # si el directorio monitoring está al mismo nivel que backend, sube un nivel
     volumes:
-      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./app/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     ports:
       - "9090:9090"
     depends_on:
-      - fastapi
+      - api
+    networks:
+      - app-network
 
   grafana:
-    image: grafana/grafana:12
+    image: grafana/grafana:latest
     container_name: exam-scan-grafana
+    restart: unless-stopped
     environment:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
@@ -70,7 +80,13 @@ services:
       - grafana_data:/var/lib/grafana
     depends_on:
       - prometheus
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
   grafana_data:
+
+networks:
+  app-network:
+    driver: bridge
