--- a/backend/app/monitoring/prometheus.yml
+++ b/backend/app/monitoring/prometheus.yml
@@ -6,4 +6,4 @@ scrape_configs:
   - job_name: 'fastapi'
     metrics_path: /metrics
     static_configs:
-      - targets: ['fastapi:8000']
+      - targets: ['api:8000']
