Refactor devcontainer configuration and restore docker-compose setup for backend and frontend services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:16
@@ -25,19 +27,32 @@ services:
 
   api:
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
     container_name: exam-scan-api
     restart: unless-stopped
     ports:
       - "8000:8000"
     env_file:
-      - ./.env
+      - ./backend/.env
     depends_on:
       - db
       - redis
     networks:
       - app-network
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: exam-scan-frontend
+    restart: unless-stopped
+    ports:
+      - "4200:80"
+    networks:
+      - app-network
+    depends_on:
+      - api
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -57,9 +72,8 @@ services:
     image: prom/prometheus:latest
     container_name: exam-scan-prometheus
     restart: unless-stopped
-    # si el directorio monitoring está al mismo nivel que backend, sube un nivel
     volumes:
-      - ./app/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./backend/app/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     ports:
       - "9090:9090"
     depends_on:
