Update workspace folder path in devcontainer configuration for backend

--- a/backend/.devcontainer/devcontainer.json
+++ b/backend/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
     "name": "FastAPI Backend DevContainer",
     "dockerComposeFile": "docker-compose.yml",
     "service": "app",
-    "workspaceFolder": "/workspace",
+    "workspaceFolder": "/workspace/backend",
     "customizations": {
         "vscode": {
             "extensions": [
