--- a/backend/.devcontainer/devcontainer.json
+++ b/backend/.devcontainer/devcontainer.json
@@ -55,6 +55,6 @@
         }
     },
     "forwardPorts": [8000, 5432],
-    "postCreateCommand": "pip install -r requirements.txt",
+    "postCreateCommand": "curl -LsSf https://astral.sh/uv/install.sh | sh && uv sync",
     "remoteUser": "vscode"
 }
