--- a/backend/.devcontainer/docker-compose.yml
+++ b/backend/.devcontainer/docker-compose.yml
@@ -18,6 +18,8 @@ services:
   db:
     image: postgres:latest
     restart: unless-stopped
+    ports:
+      - "5432:5432"
     volumes:
       - postgres-data-dev:/var/lib/postgresql/data
     environment:
