feat: Implement user authentication with JWT, including registration and login endpoints
- Added user registration and login endpoints in the auth router.
- Created models for user registration and login.
- Implemented JWT token creation and verification for user authentication.
- Added dependency to retrieve the current user from the database.
- Updated database schema and created necessary migrations.
- Enhanced security by checking user status (active/inactive) during authentication.
- Added comprehensive tests for authentication endpoints and user model.
- Updated project structure to include new API routes and dependencies.

--- a/backend/.devcontainer/devcontainer.json
+++ b/backend/.devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
                 "ms-vscode.live-server",
                 "meta.pyrefly",
                 "humao.rest-client",
-                "ms-ossdata.vscode-pgsql"
+                "ms-ossdata.vscode-pgsql",
+                "yzhang.markdown-all-in-one"
             ],
             "settings": {
                 "workbench.colorTheme": "Default Dark+",
