--- a/.devcontainer/python-container/devcontainer.json
+++ b/.devcontainer/python-container/devcontainer.json
@@ -4,24 +4,56 @@
     "../docker-compose.yml"
   ],
   "service": "backend",
-  "workspaceFolder": "/app",
-  
+  "workspaceFolder": "/workspaces/exam_scan",
+  // Monta el proyecto completo en el contenedor
+// Especifica el usuario no-root que creaste
+  "remoteUser": "pythonuser",
+  "remoteEnv": {
+    "PATH": "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+  },
+  "mounts": [
+    "source=${localWorkspaceFolder},target=/workspaces/exam_scan,type=bind,consistency=cached"
+  ],
   "customizations": {
     "vscode": {
-      "extensions": [
-        "ms-python.python",
-        "ms-python.vscode-pylance",
-        "ms-azuretools.vscode-docker",
-        "tamasfe.even-better-toml",
-        "charliermarsh.ruff",
-        "EditorConfig.EditorConfig"
-      ],
+       "extensions": [
+                "ms-python.python",
+                "ms-python.vscode-pylance",
+                "mtxr.sqltools",
+                "mtxr.sqltools-driver-pg",
+                "GitHub.copilot",
+                "github.vscode-pull-request-github",
+                "ms-vscode.live-server",
+                "meta.pyrefly",
+                "humao.rest-client",
+                "ms-ossdata.vscode-pgsql",
+                "yzhang.markdown-all-in-one"
+            ],
       "settings": {
         "python.defaultInterpreterPath": "/usr/local/bin/python",
         "python.analysis.autoImportCompletions": true,
         "python.terminal.activateEnvironment": false,
         "ruff.args": ["--line-length", "120"],
-        "python.formatting.provider": "none"
+        "workbench.colorTheme": "Default Dark+",
+        "python.languageServer": "Pylance",
+        "python.linting.enabled": true,
+        "python.linting.mypyEnabled": true,
+        "python.testing.pytestEnabled": true,
+        "python.formatting.provider": "black",
+        "python.formatting.blackArgs": [
+            "--line-length=88"
+        ],
+        "sqltools.connections": [
+            {
+                "name": "PostgreSQL (devcontainer)",
+                "driver": "PostgreSQL",
+                "server": "db",
+                "port": 5432,
+                "database": "app",
+                "username": "app_user",
+                "password": "app_password"
+            }
+        ]
       }
     }
   },
@@ -35,8 +67,5 @@
       "label": "FastAPI",
       "onAutoForward": "notify"
     }
-  },
-
-  // Especifica el usuario no-root que creaste
-  "remoteUser": "pythonuser"
+  }
 }
