Refactor DevContainer and Docker Compose setup for Exam Scan project
- Removed existing .devcontainer/devcontainer.json and docker-compose.yml files.
- Updated Dockerfile for Python backend to streamline dependency installation and user permissions.
- Modified devcontainer.json for Python backend to adjust workspace folder and environment settings.
- Created a new docker-compose.devcontainer.yml for development environment, including services for backend, frontend, PostgreSQL, Redis, pgAdmin, Prometheus, and Grafana.
- Enhanced health checks for backend and Prometheus services.
- Updated Grafana and Prometheus configuration files for improved integration.
- Cleaned up project structure and documentation for better clarity and usability.

--- a/.devcontainer/angular-container/Dockerfile
+++ b/.devcontainer/angular-container/Dockerfile
@@ -1,12 +1,15 @@
 # Usa la imagen oficial de Node.js 20, la última versión LTS
 FROM node:20-alpine
 
+# Instala las dependencias del sistema necesarias (Alpine usa apk)
+RUN apk add --no-cache bash curl git
+
 # Establece el directorio de trabajo
-WORKDIR /workspace
+WORKDIR /app
 
 # (Opcional pero buena práctica) Da permisos de escritura al usuario 'node'
 # Esto asegura que el usuario no-root pueda escribir en el directorio
-RUN chown -R node:node /workspace
+RUN chown -R node:node /app
 
 # Habilita Corepack como 'root' para que pueda modificar la configuración del sistema
 USER root
@@ -16,7 +19,10 @@ RUN corepack enable
 # Esto asegura que pnpm se use incluso si no hay una clave 'packageManager'
 RUN corepack prepare pnpm@latest --activate
 
-# Vuelve a cambiar al usuario no-root para el resto de las operaciones
+# Instalar el cli de angular
+RUN npm install -g @angular/cli@latest
+
+ENV SHELL=/bin/bash
 USER node
 
 # Expon el puerto por defecto de Angular
