--- a/.devcontainer/python-container/devcontainer.json
+++ b/.devcontainer/python-container/devcontainer.json
@@ -1,10 +1,10 @@
 {
   "name": "FastAPI Backend DevContainer",
   "dockerComposeFile": [
-    "../docker-compose.yml"
+    "../docker-compose.devcontainer.yml"
   ],
   "service": "backend",
-  "workspaceFolder": "/workspaces/exam_scan",
+  "workspaceFolder": "/app",
   // Monta el proyecto completo en el contenedor
 // Especifica el usuario no-root que creaste
   "remoteUser": "pythonuser",
@@ -12,7 +12,7 @@
     "PATH": "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   },
   "mounts": [
-    "source=${localWorkspaceFolder},target=/workspaces/exam_scan,type=bind,consistency=cached"
+    "source=${localWorkspaceFolder},target=/app,type=bind,consistency=cached"
   ],
   "customizations": {
     "vscode": {
@@ -30,9 +30,7 @@
                 "yzhang.markdown-all-in-one"
             ],
       "settings": {
-        "python.defaultInterpreterPath": "/usr/local/bin/python",
         "python.analysis.autoImportCompletions": true,
-        "python.terminal.activateEnvironment": false,
         "ruff.args": ["--line-length", "120"],
         "workbench.colorTheme": "Default Dark+",
         "python.languageServer": "Pylance",
@@ -47,9 +45,9 @@
             {
                 "name": "PostgreSQL (devcontainer)",
                 "driver": "PostgreSQL",
-                "server": "db",
+                "server": "postgres",
                 "port": 5432,
-                "database": "app",
+                "database": "exams",
                 "username": "app_user",
                 "password": "app_password"
             }
@@ -58,7 +56,7 @@
     }
   },
   
-  "postCreateCommand": "uv sync",
+//   "postCreateCommand": "uv sync",
   
   "forwardPorts": [8000],
   
