--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,7 +1,9 @@
 global:
   scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
   - job_name: 'fastapi'
+    metrics_path: /metrics
     static_configs:
-      - targets: ['fastapi:8000']  # Asegúrate de que FastAPI exponga métricas en esta ruta.
+      - targets: ['fastapi:8000']
