--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -38,7 +38,7 @@ services:
       - "4200:4200"
     volumes:
       - ../frontend:/app
-      - /app/node_modules
+      - /app/frontend/node_modules
     depends_on:
     #   - backend
       backend:
