Replace python-jose for pyjwt
- Replaced "python-jose[cryptography]" with "pyjwt" and "bcrypt" in dependencies.
- Updated versions for "pyjwt" and "bcrypt" to 2.10.1 and 4.3.0 respectively.
- Removed "cryptography" and "ecdsa" packages from the lock file.
- Cleaned up unnecessary dependencies from the lock file.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,11 +10,12 @@ dependencies = [
     "sqlmodel>=0.0.24",
     "pydantic>=2.7.0,<3.0.0",
     "pydantic-settings>=2.10.1",
-    "python-dotenv>=1.1.1", 
+    "python-dotenv>=1.1.1",
     "psycopg2-binary>=2.9.10",
     "prometheus-fastapi-instrumentator>=7.1.0",
-    "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
+    "pyjwt>=2.10.1",
+    "bcrypt>=4.3.0",
 ]
 
 [dependency-groups]
