--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -16,16 +16,17 @@ services:
         condition: service_healthy
     env_file:
       - ./.env.db
-    command: uv run fastapi dev app/main.py
-    # command: sleep infinity
+    # command: uv run fastapi dev app/main.py
+    # command: ["uv", "run", "fastapi", "dev", "app/main.py", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command: sleep infinity
     networks:
       - dev-network
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/docs || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
+    # healthcheck:
+    #   test: ["CMD-SHELL", "curl -f http://localhost:8000/docs || exit 1"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 5
+    #   start_period: 30s
 
 
   # Servicio para el frontend (Angular)
@@ -40,9 +41,9 @@ services:
       - ../frontend:/app
       - /app/frontend/node_modules
     depends_on:
-    #   - backend
-      backend:
-        condition: service_healthy
+      - backend
+    #   backend:
+    #     condition: service_healthy
     # command: cd frontend && pnpm install && ng serve --host 0.0.0.0 --disable-host-check # Ejecutamos install y ng serve
     command: sleep infinity
     networks:
@@ -68,7 +69,7 @@ services:
     networks:
       - dev-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U myuser"]
+      test: ["CMD-SHELL", "pg_isready -U app_user -d exams"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -76,7 +77,7 @@ services:
   # Servicio para pgAdmin (nuevo)
   pgadmin:
     image: dpage/pgadmin4
-    container_name: pgadmin_dashboard
+    container_name: pgadmin
     restart: unless-stopped
     ports:
       - "5050:80"
@@ -97,7 +98,7 @@ services:
   # Servicio para Redis
   redis:
     image: redis:8.2.0-alpine
-    container_name: redis_cache
+    container_name: redis
     restart: unless-stopped
     ports:
       - "6379:6379"
@@ -115,7 +116,7 @@ services:
   # Servicio para Prometheus
   prometheus:
     image: prom/prometheus:v3.5.0
-    container_name: prometheus_server
+    container_name: prometheus
     restart: unless-stopped
     ports:
       - "9090:9090"
@@ -136,7 +137,7 @@ services:
   # Servicio para Grafana
   grafana:
     image: grafana/grafana:12.1.0
-    container_name: grafana_dashboard
+    container_name: grafana
     restart: unless-stopped
     ports:
       - "3000:3000"
