feat: Refactor mount configuration in devcontainer.json files for improved readability

--- a/.devcontainer/python-container/devcontainer.json
+++ b/.devcontainer/python-container/devcontainer.json
@@ -12,7 +12,12 @@
     "PATH": "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   },
   "mounts": [
-    "source=${localWorkspaceFolder},target=/app,type=bind,consistency=cached"
+    {
+        "source": "${localWorkspaceFolder}",
+        "target": "/app",
+        "type": "bind"
+    }
+    // "source=${localWorkspaceFolder},target=/app,type=bind,consistency=cached"
   ],
   "customizations": {
     "vscode": {
