--- a/.devcontainer/angular-container/devcontainer.json
+++ b/.devcontainer/angular-container/devcontainer.json
@@ -7,7 +7,11 @@
   "workspaceFolder": "/app/frontend",
   // Agrega la siguiente línea
   "mounts": [
-  "source=${localWorkspaceFolder},target=/app,type=bind,consistency=cached"
+    {
+        "source": "${localWorkspaceFolder}",
+        "target": "/app",
+        "type": "bind"
+    }
   ],
   "customizations": {
     "vscode": {
