--- a/.devcontainer/angular-container/devcontainer.json
+++ b/.devcontainer/angular-container/devcontainer.json
@@ -49,5 +49,6 @@
     }
   },
 
-  "remoteUser": "node"
+  // En desarrollo usar usuario root, en producción usar usuario node
+  "remoteUser": "root"
 }
